Changes in @NEW@:
  o Bugs Fixed:
    * Server code returns an error to a client when committing
      duplicate troves with empty flavor strings (CNY-476)
    * When checking out a source trove from a repository using "cvc checkout"
      the  user is no longer warned about not being able to change the 
      ownership of the files checked out.

Changes in 1.0.18:
  o Client Changes:
    * Trying to shadow a cooked redirect now results in an error. (CNY-447)
    * A --keep-required option has been added to tell Conary to leave
      troves installed when removing them would break
      dependencies. This used to be the default behavior; Conary now
      issues a dependency error instead. (CNY-6)
    * "delete-entitlement" and "list-entitlements" options have been
      added to the "manageents" script.

  o Build Changes:
    * Python dependencies are now generated for .pyc files as well as
      for .py files. (CNY-459)

  o Server Changes:
    * Support for deleting entitlements, listing the entitlement
      groups a user can manage, and removing the ACL which lets a group
      manage an entitlement group has been added.
    * Entitlement management has been added to the Conary repository
      web interface. (CNY-483)

  o Bug Fixes:
    * The "list-groups" option to the "manageents" script has been
      corrected to list the groups the user can manage instead of the
      groups that user belongs to.

Changes in 1.0.17:
  o Client Changes:
    * Individual file removals performed by "conary remove" now create
      rollbacks. (CNY-7)
    * The repository mirroring client supports two new configuration
      options:
      - matchTroves is a regexp list that limits what troves will be
        mirrored based on the trove names;
      - recurseGroups takes a boolean value (True/False) which will
        cause the miror client to recurse through a groups and mirror
        everything that they include into the target repository.

  o Server Changes: